# xds-amqp

./: .gitignore  xds-amqp.cabal
src/Xds/: Amqp.hs
